--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
+    "precommit": [
+        "pretty",
+        "lint"
+    ],
     "eslintConfig": {
         "extends": "react-app"
     },
@@ -43,8 +47,6 @@
         "@types/react": "^16.9.38",
         "@types/react-dom": "^16.9.0",
         "@types/react-redux": "^7.1.9",
-        "@types/redux-devtools-extension": "^2.13.2",
-        "@types/redux-thunk": "^2.1.0",
         "@typescript-eslint/eslint-plugin": "^3.4.0",
         "@typescript-eslint/parser": "^3.4.0",
         "eslint-config-prettier": "^6.11.0",
