--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run build:css && react-scripts start",
+    "build": "npm run build:css && react-scripts build",
+    "build:css": "postcss src/assets/styles/tailwind.scss -o src/index.scss",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "pretty": "prettier --parser typescript --loglevel warn --write '*/**/*.{js,ts,tsx}'",
     "test": "react-scripts test",
@@ -34,6 +35,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -50,10 +52,13 @@
     "@types/redux-thunk": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
+    "autoprefixer": "^9.8.3",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "postcss-cli": "^7.1.1",
     "pre-commit": "^1.2.2",
     "prettier": "^2.0.5",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "tailwindcss": "^1.4.6"
   }
 }
