--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "pretty": "prettier --parser typescript --loglevel warn --write '*/**/*.{js,ts,tsx}'",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook"
+    "storybook": "start-storybook -c .storybook -s ./src"
   },
   "precommit": [
     "pretty",
@@ -80,15 +80,18 @@
     "enzyme": "^3.11.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "file-loader": "^6.0.0",
     "postcss-cli": "^7.1.1",
     "postcss-import": "^12.0.1",
     "pre-commit": "^1.2.2",
     "prettier": "^2.0.5",
     "react-docgen-typescript-loader": "^3.7.2",
+    "resolve-url-loader": "^3.1.1",
     "stylelint": "^13.6.1",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "tailwindcss": "^1.4.6"
+    "tailwindcss": "^1.4.6",
+    "ts-loader": "^7.0.5"
   }
 }
